--- a/backend/package.json
+++ b/backend/package.json
@@ -18,11 +18,13 @@
   "bugs": {
     "url": "https://github.com/engineerfoma/express-mesto-gha/issues"
   },
-  "homepage": "https://github.com/engineerfoma/express-mesto-gha#readme",
+  "homepage": ".",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "celebrate": "^15.0.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-winston": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
